# Search_engine

./: CMakeLists.txt  readme.md  readme.txt
include/: Converter_JSON.h  Inverted_index.h  Search_server.h
resourses/: config.json  requests.json
src/: CMakeLists.txt  Converter_JSON.cpp  Inverted_index.cpp  Search_server.cpp  main.cpp  unit_tests.cc
